Se realiza pagina de estilos y se revisa funcion. aun pendiente

--- a/index.htm
+++ b/index.htm
@@ -12,21 +12,25 @@
 	</header>
 	
 	<section class ="ubicacion">
-		<select  id="elige1">
+		<select name="" id="elige1">
 			<option value="1">Elige tu pokemón</option>
 			<option value="Pikachu">Pikachu</option>
 			<option value="Raticate">Raticate</option>
-		</select>
-		<select id="elige2">
-			<option value="1">Elige tu pokemón</option>
 			<option value="Charmander">Charmander</option>
+
+		</select>
+		<select name="" id="elige2">
+			<option value="1">Elige tu pokemón</option>
+			<option value="Pikachu">Pikachu</option>
 			<option value="Raticate">Raticate</option>
+			<option value="Charmander">Charmander</option>
+
 		</select>
 		</br>
 			<button onclick="batalla()">Batalla</button>
 	</section>
 	
-	<section id="respuesta"></section>	
+	<section class="salida" id="respuesta"></section>	
 
 <script type="text/javascript" src="js/main.js"></script>
 </body>
